fixed x overflow
changed to hidden

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ label {
 html,
 body {
     height: 100%;
+    overflow-x: hidden;    
 }
 
 .vertical-center {
